# GoalSignal

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
Datasets/: fifa_worldcup_fixture.csv  world_cup_2026_groups_fifa_rankings.csv  world_cup_2026_official_squad_extract.csv  world_cup_2026_player_aliases.csv  world_cup_2026_player_link_candidates.csv  world_cup_2026_squads.csv
config/: api_football.yaml  data.yaml  elo.yaml  enrichment.yaml  ensemble.yaml  experiments_d1.yaml  features_fifa.yaml  features_native.yaml  fifa_current_rankings.yaml  fifa_rankings.yaml  human_adjustments_2026.yaml  player_data.yaml  player_features.yaml  sources.yaml  squad_challenger_2026.yaml  squads.yaml  statsbomb.yaml  tournament_2026.yaml
data/manual/: README.md  backtest_sample.example.csv  expert_predictions.csv  expert_predictions.example.csv  knockout_matchups.csv  knockout_matchups.example.csv  knockout_performance_tags.csv  knockout_results_2026.csv  market_odds.csv  market_odds.example.csv  match_context.example.csv  matches.example.csv  penalties.csv  penalties.example.csv  recent_form.csv  recent_form.example.csv  recent_form_base.csv  recent_form_context_audit.csv  squad_strength.csv  squad_strength.example.csv  team_styles.csv  team_styles.example.csv  venue_context.csv  venue_context.example.csv
docs/: api_football.md  api_football_migration.md  current_fifa_snapshot.md  data_quality.md  data_setup.md  data_sources.md  demo_walkthrough.md  enrichment_coverage.md  enrichment_experiments.md  enrichment_features.md  ensemble_signals.md  feature_availability.md  fifa_2026_knockout_mapping.md  fifa_rankings.md  football_data_api.md  leakage_prevention.md  live_feedback.md  model_card.md  player_data.md  player_identity.md  player_temporal_semantics.md  prediction_ledger.md  research_report.md  squad_data.md  squad_feature_readiness.md  squad_features.md  squad_model.md  squad_scenario_analysis.md  statsbomb.md  tournament_simulation.md
scripts/: extract_fifa_2026_knockout.py
tests/: conftest.py
(+127 files in other folders)
